--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZooParc d'Arcadia</title>
-    <link rel="stylesheet" href="./css/style.css"
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>ZooParc d'Arcadia</title>
+        <link rel="stylesheet" href="./css/style.css">
+    </head>
 
-</head>
-<body>
-    <H1>Hello World</H1>
-    hello World
-    <h2>hello world</h2>
-</body>
+    <body>
+        <!-- Start header  : Le bandeau de ma page et le menu-->
+        <header>
+            
+        <!-- End header-->
+    </body>
 </html>
