liaison page contact

--- a/ECF2024/index.html
+++ b/ECF2024/index.html
@@ -5,6 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ZooParc d'Arcadia</title>
         <link rel="stylesheet" href="style.css">
+        <script>
+            function ouvrirFenetreContact() {
+                window.location.href = 'contact.html';
+            }
+        </script>
     </head>
 
     <body>
@@ -13,7 +18,6 @@
             <div class="bandeaucontact">
                 Des questions sur votre visite à Arcadia ? Contactez nous 
                 <button onclick="ouvrirFenetreContact()">ICI</button>.
-            </div>
             </div>
             <div class="bandeau">
                 <img src="logo-zoo.png" alt="Logo du Zoo" class="logo">
