--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ZooParc d'Arcadia</title>
         <link rel="stylesheet" href="style.css">
-        <script>
-            function ouvrirFenetreContact() {
-                window.location.href = 'contact.html';
-            }
-        </script>
+        <script src="index.js"></script>
     </head>
 
     <body>
@@ -33,7 +29,7 @@
                 <li><a href="section1">Présentation</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="habitats.html">Habitats</a></li>
-                <li><a href="animaux.html">Animaux</a></li>
+                <li><a href="connexion.html">Connexion</a></li>
             </ul>
         </nav>
         <!-- End nav-->
@@ -75,7 +71,58 @@
                 Le ZooParc d'Arcadia vous propose de nombreux services pour rendre votre visite inoubliable.
                 Découvrez nos services et réservez dès maintenant pour profiter pleinement de votre journée à Arcadia.
             </p>
-
+            <div class="carousel">
+                <div class="carousel-slide">
+                    <img src="restauration.jpg" alt="Restauration">
+                    <h3>Restauration</h3>
+                    <p>Profitez de nos divers points de restauration offrant des menus variés pour tous les goûts.</p>
+                </div>
+                <div class="carousel-slide">
+                    <img src="guide.jpg" alt="Visite avec un guide">
+                    <h3>Visite des habitats avec un guide</h3>
+                    <p>Découvrez les secrets des animaux avec une visite guidée par nos experts.</p>
+                </div>
+                <div class="carousel-slide">
+                    <img src="petit-train.jpg" alt="Visite en petit train">
+                    <h3>Visite du zoo en petit train</h3>
+                    <p>Parcourez le zoo confortablement installé dans notre petit train.</p>
+                </div>
+            </div>
         </main>
+        <!-- End main-->
+        <!-- Start footer : Le pied de page de la page-->
+        <footer>
+        <!-- onglet dépot d'avis-->
+        <div class="container">
+            <h1>Déposer un avis sur votre visite au zoo</h1>
+            <form id="reviewForm">
+                <div class="form-group">
+                    <label for="name">Nom :</label>
+                    <input type="text" id="name" name="name" required>
+                </div>
+                <div class="form-group">
+                    <label for="rating">Note :</label>
+                    <select id="rating" name="rating" required>
+                        <option value="5">5 - Excellent</option>
+                        <option value="4">4 - Très bien</option>
+                        <option value="3">3 - Bien</option>
+                        <option value="2">2 - Passable</option>
+                        <option value="1">1 - Mauvais</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="comments">Commentaires :</label>
+                    <textarea id="comments" name="comments" rows="4" required></textarea>
+                </div>
+                <div class="form-group button-group">
+                    <button id="submitReview" type="submit">Soumettre</button>
+                </div>
+            </form>
+            <div id="reviewsContainer">
+                <h2>Les avis des visiteurs</h2>
+                <ul id="reviewsList"></ul>
+            </div>
+        </div>
+        </footer>
     </body>
 </html>
