page habitat et contact en html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +15,7 @@
                 Des questions sur votre visite à Arcadia ? Contactez nous 
                 <button onclick="ouvrirFenetreContact()">ICI</button>.
             </div>
-            <div class="bandeau">
+            <div class="headband">
                 <div class="nom-zoo">
                     <h1>ZooParc d'Arcadia</h1>
                 </div>
@@ -36,7 +36,7 @@
         <main>
             <!-- Start main : Le contenu principal de la page-->    
             <!-- Start section1 : La section de présentation du zoo-->
-            <h2 class="sous-titre" id="section1">Bienvenue au ZooParc d'Arcadia</h2>
+            <h2 id="section1">Bienvenue au ZooParc d'Arcadia</h2>
             <p class = introduction>
                 Le ZooParc d'Arcadia, fondé en 1960, s'est établi comme un lieu incontournable pour les amoureux de la nature et les passionnés de vie sauvage. Niché près de la mystique forêt de Brocéliande, au cœur de la Bretagne en Ille-et-Vilaine, ce parc zoologique accueille petits et grands dans un cadre naturel exceptionnel depuis des décennies.
                 Notre engagement envers l'écoresponsabilité est au cœur de notre mission. Nous nous efforçons constamment de minimiser notre impact sur l'environnement et de promouvoir la conservation de la biodiversité. Grâce à des initiatives innovantes en matière de développement durable, nous avons créé un écosystème où la nature prospère et où les animaux sont choyés et heureux.
@@ -46,44 +46,44 @@
             </p>
             <!-- End section1 : présentation du zoo-->
             <!--Présentation des habitats du zoo-->
-            <h2 class="sous-titre">Découvrez nos habitats  </h2>
+            <h2>Découvrez nos habitats  </h2>
                 <div class="photo-grid">
-                    <a href="habitat1.html">
+                    <a href="habitats.html">
                         <h3 class="titre-photo">Habitat Savane</h3>
                         <img src="Assets/habitat-savane.jpg" alt="habitat Savane">
                     </a>
-                    <a href="habitat2.html">
+                    <a href="habitats.html">
                         <h3 class="titre-photo">Habitat Forêt</h3>
                         <img src="Assets/forest-nature-habitat.jpg" alt="habitat Foret">
                     </a>
-                    <a href="habitat3.html">
+                    <a href="habitats.html">
                         <h3 class="titre-photo">Habitat Marais</h3>
                         <img src="Assets/habitat-marais.jpg" alt="habitat Marais">
                     </a>
-                    <a href="habitat4.html">
+                    <a href="habitats.html">
                         <h3 class="titre-photo">Habitat Jungle</h3>
                         <img src="Assets/habitat-jungle.jpg" alt="habitat-jungle">
                     </a>
                 </div>
             <!-- Fin de la présentation des habitats  du zoo-->
-            <h2 class="sous-titre"> Découvrez nos services</h2>
+            <h2> Découvrez nos services</h2>
             <p class="introduction">
                 Le ZooParc d'Arcadia vous propose de nombreux services pour rendre votre visite inoubliable.
                 Découvrez nos services et réservez dès maintenant pour profiter pleinement de votre journée à Arcadia.
             </p>
             <div class="carousel">
                 <div class="carousel-slide">
-                    <img src="restauration.jpg" alt="Restauration">
+                    <img src="Assets/Restauration.jpg" alt="Restauration">
                     <h3>Restauration</h3>
                     <p>Profitez de nos divers points de restauration offrant des menus variés pour tous les goûts.</p>
                 </div>
                 <div class="carousel-slide">
-                    <img src="guide.jpg" alt="Visite avec un guide">
+                    <img src="Assets/Soigneur.jpg" alt="Visite avec un guide">
                     <h3>Visite des habitats avec un guide</h3>
                     <p>Découvrez les secrets des animaux avec une visite guidée par nos experts.</p>
                 </div>
                 <div class="carousel-slide">
-                    <img src="petit-train.jpg" alt="Visite en petit train">
+                    <img src="Assets/Train touristique.jpg" alt="Visite en petit train">
                     <h3>Visite du zoo en petit train</h3>
                     <p>Parcourez le zoo confortablement installé dans notre petit train.</p>
                 </div>
@@ -94,7 +94,7 @@
         <footer>
         <!-- onglet dépot d'avis-->
         <div class="container">
-            <h1>Déposer un avis sur votre visite au zoo</h1>
+            <h2>Déposer un avis sur votre visite au zoo</h2>
             <form id="reviewForm">
                 <div class="form-group">
                     <label for="name">Nom :</label>
