--- a/contact.html
+++ b/contact.html
@@ -4,17 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
+    <link rel="stylesheet" href="CSS/stylecontact.css">
+    <script src="index.js"></script>
 </head>
 <body>
-    <h1>Contactez-nous</h1>
-    <form action="/submit_form" method="post">
-        <label for="name">Nom :</label>
-        <input type="text" id="name" name="name"><br><br>
-        <label for="email">Email :</label>
-        <input type="email" id="email" name="email"><br><br>
-        <label for="message">Message :</label><br>
-        <textarea id="message" name="message"></textarea><br><br>
-        <input type="submit" value="Envoyer">
-    </form>
+    <header>
+        <div class="headband">
+            <div class="nom-zoo">
+                <h1>ZooParc d'Arcadia</h1>
+            </div>
+        </div>
+    </header>
+    <!-- End header-->
+    <!-- Start nav : Le menu de navigation sous la bannière du zoo-->
+    <nav class="nav-tabs">
+        <ul>
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="section1">Présentation</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="habitats.html">Habitats</a></li>
+            <li><a href="connexion.html">Connexion</a></li>
+        </ul>
+    </nav>
+    <!-- End nav-->
+    <div class="container">
+        <h2>Contactez-nous</h2>
+        <form id="contactForm">
+            <div class="form-group">
+                <label for="name">Nom :</label>
+                <input type="text" id="name" name="name" required>
+            </div>
+            <div class="form-group">
+                <label for="email">Email :</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="form-group">
+                <label for="message">Message :</label>
+                <textarea id="message" name="message" rows="4" required></textarea>
+            </div>
+            <div class="form-group button-group">
+                <button type="submit" id="submitContact">Envoyer</button>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
